--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "node -r babel-register -r babel-polyfill -r dotenv/config test/test.js | faucet",
+    "test": "babel-node test/test.js | faucet",
     "tail": "tail -f app.log | bunyan -o short"
   },
   "author": "benjamingregory",
@@ -19,7 +19,6 @@
     "babel-register": "^6.8.0",
     "blue-tape": "^0.2.0",
     "bunyan": "^1.8.0",
-    "dotenv": "^2.0.0",
     "faucet": "0.0.1",
     "nock": "^7.0.2"
   },
